--- a/index.html
+++ b/index.html
@@ -25,11 +25,22 @@
         {
             padding-left: 10px;
         }
+        #alerts
+        {
+            z-index: 10;
+            position: fixed;
+            left: 50%;
+            transform: translate(-50%, 0);
+            margin-top: 5px;
+        }
     </style>
     <title>Contacts</title>
 </head>
 <body>
     <div class="container">
+        <div class="row">
+            <div id="alerts" class="col-md-6 col-xs-12"></div>
+        </div>
         <div class="row"></div>
             <div class="col-md-3"></div>
             <div id="content" class="col-md-6"></div>
