--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
         {
             vertical-align: middle !important;
         }
+        .glyphicon-remove
+        {
+            margin-left: -10px;
+        }
+        .text-red, .text-red:hover, .text-red:focus, .text-red:link, .text-red:visited
+        {
+            color: red;
+        }
         td
         {
             height: 40px;
